...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/valueLenght"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginTop="219dp"
        android:hint="Länge"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
...
